# funpayhelper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  addlotdialog.cpp  addlotdialog.h  addlotdialog.ui  botengine.cpp  botengine.h  botworker.cpp  botworker.h  cookieloader.cpp  cookieloader.h  dashboardwindow.cpp  dashboardwindow.h  dashboardwindow.ui  funpayapi.cpp  funpayapi.h  gamemodels.h  gamesparser.cpp  gamesparser.h  gamesservice.cpp  gamesservice.h  httpclient.cpp  httpclient.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  models.h  resources.qrc  settingsmanager.cpp  settingsmanager.h
